src/ui/draw_blocks/snapshots/oxker__ui__draw_blocks__logs__tests__draw_blocks_logs_custom_colors_logs.snap
---
source: src/ui/draw_blocks/logs.rs
expression: setup.terminal.backend()
---
"╭ Logs 3/3 - container_1 - image_1 ╮"
"│  line 1                          │"
"│  line 2                          │"
"│▶ line 3                          │"
"│                                  │"
"╰──────────────────────────────────╯"
