src/ui/draw_blocks/snapshots/oxker__ui__draw_blocks__logs__tests__draw_blocks_logs_none.snap
---
source: src/ui/draw_blocks/logs.rs
expression: setup.terminal.backend()
---
"╭ Logs - container_1 - image_1 ───╮"
"│          no logs found          │"
"│                                 │"
"│                                 │"
"│                                 │"
"╰─────────────────────────────────╯"
